--- a/annasta-woocommerce-product-filters/styles/custom-styles/awf-deprecated-1-3-0.css
+++ b/annasta-woocommerce-product-filters/styles/custom-styles/awf-deprecated-1-3-0.css
@@ -1,4 +1,4 @@
-/* annasta Woocommerce Product Filters Wordpress Plugin Stylesheet */
+/* annasta Filters for WooCommerce Wordpress Plugin Stylesheet */
 
 .awf-clearfix::before,
 .awf-clearfix::after {
